src/content/docs/en/sdk/android/v5/features/events.mdx
---
title: Send event information
description: Use these methods to send event information to Adjust.
slug: en/sdk/android/features/events
multiVersion: true
---

The Adjust SDK provides an `AdjustEvent` object which can be used to structure and send event information from your app to Adjust's servers.

## [Instantiate an AdjustEvent object](instantiate-an-adjustevent-object)

<CodeBlock title="Method signature">

```java
public AdjustEvent(String eventToken)
```

</CodeBlock>

To send event information with the Adjust SDK, you need to instantiate an `AdjustEvent` object. This object contains variables that are sent to Adjust when an event occurs in your app.

To instantiate an event object, create a new `AdjustEvent` instance and pass the following parameters:

-  `eventToken` (`String`): Your Adjust [event token](https://help.adjust.com/en/article/add-events#manage-your-events).

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
val adjustEvent = AdjustEvent("abc123")
Adjust.trackEvent(adjustEvent)
```

</Tab>
<Tab title="Java" sync="java">

```java
AdjustEvent adjustEvent = new AdjustEvent("abc123");
Adjust.trackEvent(adjustEvent);
```

</Tab>
</Tabs>

## [Send an event](send-an-event)

<CodeBlock title="Method signature">

```java
public static void trackEvent(AdjustEvent event)
```

</CodeBlock>

You can associate your [Adjust event tokens](https://help.adjust.com/en/article/add-events#add-event) to actions in your app to record them. To record an event:

-  Create a new Adjust event instance and pass your event token as a `String` argument.
-  Call the `trackEvent` method with your event instance as an argument.

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
val adjustEvent = AdjustEvent("abc123")
Adjust.trackEvent(adjustEvent)
```

</Tab>
<Tab title="Java" sync="java" >

```java
AdjustEvent adjustEvent = new AdjustEvent("abc123");
Adjust.trackEvent(adjustEvent);
```

</Tab>
</Tabs>

### [Example](example)

This example shows how to record an event with the token `g3mfiw` whenever a user interacts with a button.

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
fun onTrackSimpleEventClick(v: View) {
   val event = AdjustEvent("g3mfiw")
   Adjust.trackEvent(event)
}
```

</Tab>
<Tab title="Java" sync="java" >

```java
public void onTrackSimpleEventClick(View v) {
   AdjustEvent event = new AdjustEvent("g3mfiw");
   Adjust.trackEvent(event);
}
```

</Tab>
</Tabs>

<CodeBlock title="Event log" collapse="6-46">

```txt
Path:      /event
ClientSdk: android$ANDROID_V4_VERSION
Parameters:
  android_uuid     781f17d5-5048-4fae-a4e5-77b58bab62b9
  api_level        34
  app_token        2fm9gkqubvpc
  app_version      1.0
  attribution_deeplink 1
  callback_params  {"key":"value","foo":"bar"}
  connectivity_type 1
  country          US
  cpu_type         arm64-v8a
  created_at       2024-01-25T14:13:16.151Z+0100
  currency         EUR
  device_manufacturer Google
  device_name      sdk_gphone64_arm64
  device_type      phone
  display_height   2205
  display_width    1080
  environment      sandbox
  event_buffering_enabled 0
  event_count      3
  event_token      g3mfiw
  gps_adid         5962dfc1-3a53-4692-850b-22c4bf4311a5
  gps_adid_attempt 2
  gps_adid_src     service
  hardware_name    UE1A.230829.036
  language         en
  mcc              310
  mnc              260
  needs_response_details 1
  os_build         UE1A.230829.036
  os_name          android
  os_version       14
  package_name     com.adjust.examples
  partner_params   {"key":"value","foo":"bar"}
  revenue          0.25
  screen_density   high
  screen_format    long
  screen_size      normal
  session_count    2
  session_length   23
  subsession_count 1
  time_spent       23
  tracking_enabled 1
  ui_mode          1
```

</CodeBlock>

## [Record event revenue](record-event-revenue)

<CodeBlock title="Method signature">

```java
public void setRevenue(double revenue, String currency)
```

</CodeBlock>

You can record revenue associated with an event by setting the revenue and currency properties on your event instance. Use this feature to record revenue-generating actions in your app.

To set these properties, call the `setRevenue` method and pass the following arguments:

-  `revenue` (`double`): The amount of revenue generated by the event
-  `currency` (`String`): The [ISO 4217 code](https://www.iban.com/currency-codes) of the event currency.

<Callout type="seealso">

Check the guide to [recording purchases in different currencies](https://help.adjust.com/en/article/currency-conversion) for more information.

</Callout>

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
val adjustEvent = AdjustEvent("abc123")
adjustEvent.setRevenue(0.01, "EUR")
Adjust.trackEvent(adjustEvent)
```

</Tab>
<Tab title="Java" sync="java">

```java
AdjustEvent adjustEvent = new AdjustEvent("abc123");
adjustEvent.setRevenue(0.01, "EUR");
Adjust.trackEvent(adjustEvent);
```

</Tab>
</Tabs>

### [Example](example-1)

This example shows how to record an event with the token `g3mfiw` whenever a user interacts with a button. The function sets the `revenue` property of this event to _`0.25`_ and the `currency` property to _`EUR`_.

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
fun onTrackRevenueEventClick(v: View) {
   val event = AdjustEvent("g3mfiw")
   event.setRevenue(0.25, "EUR")
   Adjust.trackEvent(event)
}
```

</Tab>
<Tab title="Java" sync="java">

```java
public void onTrackRevenueEventClick(View v) {
   AdjustEvent event = new AdjustEvent("g3mfiw");
   event.setRevenue(0.25, "EUR")
   Adjust.trackEvent(event);
}
```

</Tab>
</Tabs>

<CodeBlock title="Event log" highlight="{range: 7-8}">

```txt
Path:      /event
ClientSdk: android$ANDROID_V4_VERSION
Parameters:
  environment      sandbox
  event_count      3
  event_token      abc123
  revenue          0.25
  currency         EUR
```

</CodeBlock>

### [Purchase verification](purchase-verification)

<Callout type="note">

Purchase verification is an **optional** feature. These settings have no effect unless purchase verification is enabled.

</Callout>

If you've enabled [purchase verification](https://help.adjust.com/en/article/purchase-verification), you must send additional information with your purchase events to verify them. When Adjust's servers receive this information in an event object, they forward it to Google to verify the purchase.

-  `productId` (`String`): The product identifier of the item that was successfully purchased
-  `purchaseToken` (`String`): The purchase token generated for your successfully completed in-app purchase

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
val adjustEvent = AdjustEvent("abc123")
adjustEvent.setRevenue(6.0, "EUR");
adjustEvent.setProductId("product-id");
adjustEvent.setPurchaseToken("purchase-token");
Adjust.trackEvent(adjustEvent);
```

</Tab>
<Tab title="Java" sync="java">

```java
AdjustEvent adjustEvent = new AdjustEvent("abc123");
adjustEvent.setRevenue(6.0, "EUR");
adjustEvent.setProductId("product-id");
adjustEvent.setPurchaseToken("purchase-token");
Adjust.trackEvent(adjustEvent);
```

</Tab>
</Tabs>

## [Deduplicate revenue events](deduplicate-revenue-events)

<CodeBlock title="Method signature">

```java
public void setDeduplicationId(String deduplicationId)
```

</CodeBlock>

You can pass an optional identifier for event deduplication by calling the `AdjustEvent.setDeduplicationId` method. When Adjust receives duplicate events from the SDK, it disregards them.

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
val event = AdjustEvent("event_token")
event.deduplicationId = "deduplication_id"
```

</Tab>
<Tab title="Java" sync="java">

```java
AdjustEvent event = new AdjustEvent("event_token");
event.setDeduplicationId("deduplication_id");
```

</Tab>
</Tabs>

### [Set deduplication ID limit](set-deduplication-id-limit)

<CodeBlock title="Method signature">

```java
public void setEventDeduplicationIdsMaxSize(Integer eventDeduplicationIdsMaxSize)
```

</CodeBlock>

By default, the Adjust SDK supports up to **10** unique deduplication IDs. You can configure this setting by calling the `AdjustConfig.setEventDeduplicationIdsMaxSize` method.

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
val adjustConfig = AdjustConfig()
adjustConfig.eventDeduplicationIdsMaxSize = 20
```

</Tab>
<Tab title="Java" sync="java">

```java
AdjustConfig adjustConfig = new AdjustConfig();
adjustConfig.setEventDeduplicationIdsMaxSize(20);
```

</Tab>
</Tabs>

### [Example](example-2)

This example shows how to record an event with the token `g3mfiw` whenever a user interacts with a button. The function sets the `orderId` to `5e85484b-1ebc-4141-aab7-25b869e54c49` using the `setDeduplicationId` method.

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
fun onTrackUniqueEventClick(v: View) {
   val event = AdjustEvent("g3mfiw")
   event.setDeduplicationId("5e85484b-1ebc-4141-aab7-25b869e54c49")
   Adjust.trackEvent(event)
}
```

</Tab>
<Tab title="Java" sync="java">

```java
public void onTrackUniqueEventClick(View v) {
   AdjustEvent event = new AdjustEvent("g3mfiw");
   event.setDeduplicationId("5e85484b-1ebc-4141-aab7-25b869e54c49")
   Adjust.trackEvent(event);
}
```

</Tab>
</Tabs>

<CodeBlock title="Event log" highlight="{range: 7}">

```txt
Path:      /event
ClientSdk: android5.0.0-SNAPSHOT
Parameters:
  environment      sandbox
  event_count      3
  event_token      abc123
  deduplication_id 5e85484b-1ebc-4141-aab7-25b869e54c49
```

</CodeBlock>

## [Add callback parameters](add-callback-parameters)

<CodeBlock title="Method signature">

```java
public void addCallbackParameter(String key, String value)
```

</CodeBlock>

If you [register a callback URL](https://help.adjust.com/en/article/set-up-callbacks) in the Adjust dashboard, the SDK sends a GET request to your callback URL when it records an event.

You can configure callback parameters to send to your servers. Once you configure parameters on an event, the SDK appends them to your [callback URL](https://help.adjust.com/en/article/raw-data-exports). You can use this information to analyze your users' in-app behavior with your BI system.

Add callback parameters to your event by calling the `addCallbackParameter` method with `String` key-value arguments. You can add multiple parameters by calling this method multiple times.

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
val adjustEvent = AdjustEvent("abc123")
adjustEvent.addCallbackParameter("key", "value")
adjustEvent.addCallbackParameter("foo", "bar")
Adjust.trackEvent(adjustEvent)
```

</Tab>
<Tab title="Java" sync="java">

```java
AdjustEvent adjustEvent = new AdjustEvent("abc123");
adjustEvent.addCallbackParameter("key", "value");
adjustEvent.addCallbackParameter("foo", "bar");
Adjust.trackEvent(adjustEvent);
```

</Tab>
<Tab title="Javascript" sync="js">

```js
let adjustEvent = new AdjustEvent("abc123");
adjustEvent.addCallbackParameter("key", "value");
adjustEvent.addCallbackParameter("foo", "bar");
Adjust.trackEvent(adjustEvent);
```

</Tab>
</Tabs>

The Adjust SDK measures the event and sends a request to your URL with the callback parameters. For example, if you register the URL `https://www.mydomain.com/callback`, your callback looks like this:

<CodeBlock highlight="key=value, foo=bar">

```http
https://www.mydomain.com/callback?key=value&foo=bar
```

</CodeBlock>

<Callout type="note">

Adjust doesn't store your custom callback parameters. Custom parameters are only appended to your callback URL.

</Callout>

If you're using CSV uploads, make sure to add the parameters to your CSV definition.

Adjust supports many placeholders which you can use to pass information from the SDK to your URL. For example, the `{idfa}` placeholder for iOS and the `{gps_adid}` placeholder for Android. The `{publisher_parameter}` placeholder presents all callback parameters in a single string.

<Callout type="seealso">

You can read more about using URL callbacks, including a full list of available values, in the [callbacks guide](https://help.adjust.com/en/article/callbacks).

</Callout>

### [Example](example-3)

This example shows how to record an event with the token `g3mfiw` whenever a user interacts with a button. The following callback parameters are added:

-  The `event_token`
-  The `revenue_amount` generated by the event

The resulting callback URL looks like this:

<CodeBlock highlight="event_token=g3mfiw, revenue_amount=0.05">

```http
http://www.mydomain.com/callback?event_token=g3mfiw&revenue_amount=0.05
```

</CodeBlock>

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
fun onTrackUniqueEventClick(v: View) {
   val event = AdjustEvent("g3mfiw")
   event.addCallbackParameter("event_token", "g3mfiw")
   event.addCallbackParameter("revenue_amount", "0.05")
   Adjust.trackEvent(event)
}
```

</Tab>
<Tab title="Java" sync="java">

```java
public void onTrackUniqueEventClick(View v) {
   AdjustEvent event = new AdjustEvent("g3mfiw");
   event.addCallbackParameter("event_token", "g3mfiw");
   event.addCallbackParameter("revenue_amount", "0.05");
   Adjust.trackEvent(event);
}
```

</Tab>
</Tabs>

You can check the parameters were sent to Adjust by checking for `callback_params` in your logs.

<CodeBlock title="Event log" highlight="{range: 4}">

```txt
Path:      /event
ClientSdk: android$ANDROID_V4_VERSION
Parameters:
  callback_params  {"event_token":"g3mfiw","revenue_amount":"0.05"}
  environment      sandbox
  event_count      1
  event_token      g3mfiw
```

</CodeBlock>

## [Add partner parameters](add-partner-parameters)

<CodeBlock title="Method signature">

```java
public void addPartnerParameter(String key, String value)
```

</CodeBlock>

You can send extra information to your network partners by adding [partner parameters](https://help.adjust.com/en/article/data-sharing-ad-network#map-parameters).

Adjust sends partner parameters to [external partners](https://help.adjust.com/en/article/integrated-partners) you have set up. This information is useful for more granular analysis and retargeting purposes. Adjust's servers forward these parameters once you have set them up and enabled them for a partner.

<Callout type="note">

Partner parameters don't appear in raw data by default. You can add the `{partner_parameters}` placeholder to receive them as a single string.

</Callout>

Add partner parameters to your event by calling the `addPartnerParameter` method with `String` key-value arguments. You can add multiple parameters by calling this method multiple times.

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
val adjustEvent = AdjustEvent("abc123")
adjustEvent.addPartnerParameter("key", "value")
adjustEvent.addPartnerParameter("foo", "bar")
Adjust.trackEvent(adjustEvent)
```

</Tab>
<Tab title="Java" sync="java">

```java
AdjustEvent adjustEvent = new AdjustEvent("abc123");
adjustEvent.addPartnerParameter("key", "value");
adjustEvent.addPartnerParameter("foo", "bar");
Adjust.trackEvent(adjustEvent);
```

</Tab>
<Tab title="Javascript" sync="js">

```js
let adjustEvent = new AdjustEvent("abc123");
adjustEvent.addPartnerParameter("key", "value");
adjustEvent.addPartnerParameter("foo", "bar");
Adjust.trackEvent(adjustEvent);
```

</Tab>
</Tabs>

### [Example](example-4)

This example shows how to record an event with the token `g3mfiw` whenever a user interacts with a button. The following partner parameters are added:

-  The `product_id` of the associated product
-  The `user_id` of the user who triggered the event

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
fun onTrackUniqueEventClick(v: View) {
   val event = AdjustEvent("g3mfiw")
   event.addPartnerParameter("product_id", "29")
   event.addPartnerParameter("user_id", "835")
   Adjust.trackEvent(event)
}
```

</Tab>
<Tab title="Java" sync="java">

```java
public void onTrackUniqueEventClick(View v) {
   AdjustEvent event = new AdjustEvent("g3mfiw");
   event.addPartnerParameter("product_id", "29");
   event.addPartnerParameter("user_id", "835");
   Adjust.trackEvent(event);
}
```

</Tab>
</Tabs>

You can check the parameters were sent to Adjust by checking for `partner_params` in your logs.

<CodeBlock title="Event log" highlight="{range: 4}">

```txt
Path:      /event
ClientSdk: android$ANDROID_V4_VERSION
Parameters:
  partner_params  {"product_id":"29","user_id":"835"}
  environment      sandbox
  event_count      1
  event_token      g3mfiw
```

</CodeBlock>

## [Add a callback identifier](add-a-callback-identifier)

<CodeBlock title="Method signature">

```java
public void setCallbackId(String callbackId)
```

</CodeBlock>

You can add a custom string identifier to each event you want to measure. Adjust's servers can report on this identifier in event callbacks. This enables you to keep track of which events have been successfully measured.

Set up this identifier by calling the `setCallbackId` method with your ID as a `String` argument.

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
val adjustEvent = AdjustEvent("abc123")
adjustEvent.setCallbackId("{Your-Custom-Id}")
Adjust.trackEvent(adjustEvent)
```

</Tab>
<Tab title="Java" sync="java">

```java
AdjustEvent adjustEvent = new AdjustEvent("abc123");
adjustEvent.setCallbackId("{Your-Custom-Id}");
Adjust.trackEvent(adjustEvent);
```

</Tab>
<Tab title="Javascript" sync="js">

```js
let adjustEvent = new AdjustEvent("abc123");
adjustEvent.setCallbackId("{Your-Custom-Id}");
Adjust.trackEvent(adjustEvent);
```

</Tab>
</Tabs>

### [Example](example-5)

This example shows how to record an event with the token `g3mfiw` whenever a user interacts with a button. In this example, the `callbackId` is set to `f2e728d8-271b-49ab-80ea-27830a215147`.

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
fun onTrackUniqueEventClick(v: View) {
   val event = AdjustEvent("g3mfiw")
   event.setCallbackId("f2e728d8-271b-49ab-80ea-27830a215147")
   Adjust.trackEvent(event)
}
```

</Tab>
<Tab title="Java" sync="java">

```java
public void onTrackUniqueEventClick(View v) {
   AdjustEvent event = new AdjustEvent("g3mfiw");
   event.setCallbackId("f2e728d8-271b-49ab-80ea-27830a215147")
   Adjust.trackEvent(event);
}
```

</Tab>
</Tabs>

<CodeBlock title="Event log" highlight="{range: 7}">

```txt
Path:      /event
ClientSdk: android$ANDROID_V4_VERSION
Parameters:
  environment      sandbox
  event_count      3
  event_token      g3mfiw
  callback_id      f2e728d8-271b-49ab-80ea-27830a215147
```

</CodeBlock>
